syntax = "proto3";

import "google/protobuf/empty.proto";
import "google/protobuf/any.proto";

package pb;

message Product {
  string id = 1;
  string name = 2;
  string description = 3;
  map<string, google.protobuf.Any> details = 4;
  double price = 5;
  int32 quantity = 6;
}

message ProductId {
    string id = 1;
}

message ValidateQuantity {
    string id = 1;
    int32 quantity = 2;
}

service ProductService {
  rpc Create (Product) returns (Product) {}
  rpc FindOne (ProductId) returns (Product) {}
  rpc FindAll (google.protobuf.Empty) returns (stream Product) {}
  rpc Update (Product) returns (Product) {}
  rpc Delete (ProductId) returns (google.protobuf.Empty) {}
  rpc Validate (ValidateQuantity) returns (google.protobuf.Empty) {}
}

